--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="section-hero">
       <div class="container-hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-btn">Замовити послугу</button>
+        <button data-modal-open type="button" class="hero-btn">Замовити послугу</button>
       </div>
     </section>
 
@@ -396,6 +396,12 @@
       </div>
     </div>
   </footer>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta quisquam libero incidunt autem eos enim. Sit illum harum accusantium nisi!</p>
+      <button data-modal-close>Закрити</button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
-
 </html>
