--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <ul class="contacts lists">
         <li>
           <a href="mailto:info@devstudio.com" class="connect">
-            <svg class="connect-icon" width="20" height="18">
+            <svg class="connect-icon" width="19" height="17">
               <use href="./image/symbol-defs.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
         <li>
           <a href="tel:+380961111111" class="connect">
-            <svg class="connect-icon" width="18" height="20">
+            <svg class="connect-icon" width="17" height="19">
               <use href="./image/symbol-defs.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -398,8 +398,11 @@
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta quisquam libero incidunt autem eos enim. Sit illum harum accusantium nisi!</p>
-      <button data-modal-close>Закрити</button>
+      <button class="modal-btn" data-modal-close>
+        <svg width="18" height="18">
+          <use href="./image/symbol-defs.svg#icon-close-black"></use>
+        </svg>
+      </button>
     </div>
   </div>
   <script src="./js/modal.js"></script>
