--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
 
       <ul class="contacts lists">
         <li>
-          <a href="mailto:info@devstudio.com" class="connect"><svg class="connect-icon" width="20" height="18">
+          <a href="mailto:info@devstudio.com" class="connect"><svg class="connect-icon" width="19" height="17">
               <use href="./image/symbol-defs.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="connect"><svg class="connect-icon" width="18" height="20">
+          <a href="tel:+380961111111" class="connect"><svg class="connect-icon" width="17" height="19">
               <use href="./image/symbol-defs.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
         </li>
@@ -67,10 +67,13 @@
         <ul class="filtr-works lists">
           <li class="item">
             <a href="" class="link-filtr">
-              <div class="product"><img src="./image/proj1.jpg" alt="Превью проекту" width="370" height="294" /></div>
+              <img src="./image/proj1.jpg" alt="Превью проекту" width="370" height="294" />
               <div class="container-description">
-                <p class="description">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                  Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
               </div>
               <div class="filtr-item">
                 <h2 class="filtr-title">Технокряк</h2>
@@ -80,66 +83,122 @@
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj2.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
-                <p class="filtr-text">Дизайн</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="filtr-text">Дизайн</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj3.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Ресторан Seafood</h2>
-                <p class="filtr-text">Додаток</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Ресторан Seafood</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj4.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Проєкт Prime</h2>
-                <p class="filtr-text">Маркетинг</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт Prime</h2>
+                  <p class="filtr-text">Маркетинг</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj5.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Проєкт Boxes</h2>
-                <p class="filtr-text">Додаток</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт Boxes</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj6.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Inspiration has no Borders</h2>
-                <p class="filtr-text">Веб-сайт</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Inspiration has no Borders</h2>
+                  <p class="filtr-text">Веб-сайт</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj7.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Видання Limited Edition</h2>
-                <p class="filtr-text">Дизайн</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Видання Limited Edition</h2>
+                  <p class="filtr-text">Дизайн</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj8.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Проєкт LAB</h2>
-                <p class="filtr-text">Маркетинг</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт LAB</h2>
+                  <p class="filtr-text">Маркетинг</p>
+                </div>
             </a>
           </li>
           <li class="item">
             <a href="" class="link-filtr"><img src="./image/proj9.jpg" alt="Превью проекту" width="370" height="294" />
-              <div class="filtr-item">
-                <h2 class="filtr-title">Growing Business</h2>
-                <p class="filtr-text">Додаток</p>
-              </div>
+              <div class="container-description">
+                <p class="description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Growing Business</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
             </a>
           </li>
         </ul>
