--- a/index.html
+++ b/index.html
@@ -388,6 +388,16 @@
           </li>
         </ul>
       </div>
+      <div class="container-form">
+        <b class="sign-up">Підпишіться на розсилку</b>
+        <form class="form">
+          <div class="form-mail">
+            <input type="email" class="form-input" name="mail" id="mail">
+            <label for="mail" class="form-label">E-mail</label>
+          </div>
+        </form>
+        <button class="footer-btn" type="button">Підписатися</button>
+      </div>
     </div>
   </footer>
   <div class="backdrop is-hidden" data-modal>
